# open-tts-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
backend/: README.md
backend/docker/openf5/: Dockerfile  patch_f5tts.py  server.py
backend/docker/openvoice/: Dockerfile  server.py
backend/scripts/: build-all.sh  run-all.sh  run-openf5.sh  run-openvoice.sh  setup-arch.sh  status.sh  stop-all.sh  test-imports.sh
docs/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  research.txt  status.md
src/: lib.rs  main.rs
src/backend/: client.rs  mod.rs  types.rs
src/cli/: args.rs  mod.rs
src/engine/: mod.rs  tts.rs
src/voice/: manager.rs  mod.rs
tests/fixtures/: health_response.json  voices_response.json
